--- a/CarAnim.html
+++ b/CarAnim.html
@@ -6,4 +6,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Media Queries</title>
-    <style>
+    <head>
+<body>
+    <div class="sky"></div>
+        <div class="trees"><div>
+        <div class="track"><div>
+            <div class="car"></div>
+                <div class="wheel1"><div>
+                    <div class="wheel2"></div>
+                </div>
+
+        
+    
+
+</body>
+
+
+    </head>
+    </html>
